Prevented zoom on mobile
A tiny bit of style tweaking and some extra text

Add favicon.ico, not sure if that worked

--- a/surfinfo/static/surfinfo/style.css
+++ b/surfinfo/static/surfinfo/style.css
@@ -17,6 +17,8 @@ body {
 * {
     font-family: var(--body_font);
     color: AliceBlue;
+}
+div {
     margin-left: 4px;
 }
 
@@ -24,13 +26,14 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--header_font)
 }
-h1 {
+h1, h3 {
     color: var(--accent_color)
 }
 
 /* form stuff */
 input, select, option {
     color: black;
+    font-size: 1.05em;
 }
 input[type=submit] {
     margin-top: 15px;
@@ -40,6 +43,9 @@ input[type=submit] {
     background-color: var(--accent_color);
     color: AliceBlue;
     border-style: none;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    padding-left: 2em;
+    padding-right: 2em;
 
     -webkit-appearance: none;
 }
@@ -52,8 +58,11 @@ input[type=submit] {
 .list_section_header {
     color: var(--accent_color);
     font-weight: bold;
+    font-size: 1.1em;
     text-transform: uppercase;
     list-style-type: none;
+
+    padding-top: 10px;
 }
 
 /* tables */
